# jvt

./: .gitignore  Cargo.toml  DESIGN.md  README.md
benches/: comparison.rs
examples/: basics.rs  bench_proofs.rs  proof_size_analysis.rs  state_snapshots.rs  verkle_proofs.rs  versioning.rs
spec/: README.md  commitment.qnt  jvt.qnt
src/: commitment.rs  ipa.rs  lib.rs  main.rs  node.rs  proof.rs  storage.rs  tree.rs  verkle_proof.rs
src/commitment/: mock.rs  mod.rs  pedersen.rs
src/multiproof/: crs.rs  ipa.rs  lagrange.rs  mod.rs  prover.rs  transcript.rs
tests/: property_tests.rs  quint_traces.rs  security_tests.rs
