[package]
name = "jellyfish-verkle-tree"
version = "0.1.0"
edition = "2021"
description = "Jellyfish Verkle Tree — hybrid JMT + verkle tree authenticated data structure"

[features]
default = []
pedersen = [
    "ark-ec",
    "ark-ff",
    "ark-serialize",
    "ark-std",
    "ark-ed-on-bls12-381-bandersnatch",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"

# Pedersen commitment dependencies (optional, behind "pedersen" feature)
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-std = { version = "0.5", optional = true }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", optional = true }

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"
quint-connect = "0.1"

[[bench]]
name = "comparison"
harness = false
