[package]
name = "jellyfish-verkle-tree"
version = "0.1.0"
edition = "2021"
description = "Jellyfish Verkle Tree — hybrid JMT + verkle tree authenticated data structure"

[dependencies]
ark-ec = "0.5"
ark-ed-on-bls12-381-bandersnatch = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"
quint-connect = "0.1"

[[bench]]
name = "comparison"
harness = false
